--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "news-feed-eradicator",
-	"title": "News Feed Eradicator for Facebook",
+	"name": "linkedin-news-feed-eradicator",
+	"title": "News Feed Eradicator for LinkedIn",
 	"id": "jid1-oWTXWc3MRzRuiQ",
-	"description": "Find yourself spending too much time on Facebook? Eradicate distractions by replacing your entire news feed with an inspiring quote",
+	"description": "Find yourself spending too much time on LinkedIn? Eradicate distractions by replacing your entire news feed with an inspiring quote",
 	"author": "Jordan West",
 	"license": "MIT",
-	"version": "1.2.3",
+	"version": "1.0.0",
 	"devDependencies": {
 		"prettier": "1.14.3",
 		"redux": "^4.0.5",
